# mcp-printer

./: .gitignore  ANNOUNCEMENT.md  CAMERA_MCP_SPEC.md  DEPLOY.md  PUBLISH.md  README.md  pyproject.toml
examples/: clawbot.mcp.json  openclaw-plugin-config.json  printer-camera-link.example.json  printers.example.json
mcp_printer/: __init__.py  __main__.py  config.py  http.py  printers.py  server.py
openclaw-plugin/: README.md  openclaw.plugin.json  package-lock.json  package.json
openclaw-plugin/src/: index.test.ts  index.ts
publishing/: CLAWHUB_SUPPORT_ISSUE.md  HUGGINGFACE_CAMERA_CARD.md  HUGGINGFACE_PRINTER_CARD.md  SUBSTACK_POST.md
publishing/clawhub-skills/mcp-printer/: SKILL.md
publishing/hf-spaces/mcp-camera-watch/: README.md  index.html
publishing/hf-spaces/mcp-printer/: README.md  index.html
scripts/: install_local.sh  install_openclaw_e2e.sh  smoke_mcp.sh
tests/: test_config.py  test_server.py
