[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-printer"
version = "0.1.0"
description = "MCP server for sending jobs to OctoPrint and Moonraker 3D printers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Steve Villari" },
  { name = "Villocity Labs" }
]
keywords = ["mcp", "3d-printer", "octoprint", "moonraker", "klipper"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications"
]

[project.scripts]
mcp-printer = "mcp_printer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
